--- a/scss/style.scss
+++ b/scss/style.scss
@@ -522,7 +522,7 @@
 
     .material-symbols-outlined:active {
         color: #fff;
-        background-color: #3e3b3b;
+        background-color: #898989;
         font-variation-settings:
             'FILL' 0,
             'wght' 250,
